crates/agentprof-tui/tests/snapshots/views__flamegraph__cross_turn_tool.snap
---
source: crates/agentprof-tui/tests/views.rs
expression: buffer_to_symbol_grid(&buffer)
---
┌ Flamegraph (1/3) ────────────────────────────────────────────────────────────────────────────────┐
│ Turn   Duration OutTK  █ tool  ░ thinking  · padding                                             │
│   T1       2.0s   -    ░░░░░░░░░░░░░░░░░░███████████████████·····································│
│   T2       4.0s   -    ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│T1 selected:  bash(5.0s) · Enter for detail                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────┐
│Turn turn-A | model=- mode=Interactive out_tokens=- tools=1                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
