crates/agentprof-tui/tests/snapshots/views__flamegraph__with_aborts.snap
---
source: crates/agentprof-tui/tests/views.rs
assertion_line: 81
expression: buffer_to_symbol_grid(&buffer)
---
┌ Flamegraph (1/3) ────────────────────────────────────────────────────────────────────────────────┐
│   T1       4.0s    10  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░████████████████░░░░░░░░░░░░░░···············│
│   T2       5.0s     8  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│T1 selected:  bash(1.0s) · Enter for detail                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────┐
│Turn 00000000-0000-0000-0000-000000000202 | model=gpt-5-mini mode=Interactive out_tokens=10 tools=│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
